data/derived/comb/progs/unify/prog8410.ml.out
Characters 103-105:
  | Sine(v) -> sin(pi*eval (v,x,y))
                   ^^
Error: This expression has type float but an expression was expected of type
         int
